On save it will go to the correct checklist

--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -460,6 +460,7 @@ checklistApp.controller("AdminCtrl", function ($scope) {
           function(result, event) {
           if (event.status) {
           console.log('Created everything');
+          window.location.assign("/" + result.Id);
           } else if (event.type == 'exception') {
           console.log('Exception');
           } else {
