--- a/Checklist.html
+++ b/Checklist.html
@@ -15,6 +15,8 @@ id="todo"
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
   <apex:includeScript value="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"/>
   <apex:includeScript value="{!URLFOR($Resource.ChecklistAssets, 'forceTK/forceTK.js')}"/>
+  <apex:includeScript value="{!URLFOR($Resource.RollCallAssets, 'fastclick/fastclick.js')}"/>
+
   <script language="javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
   <script>
   Visualforce.remoting.timeout = 120000;
@@ -76,7 +78,6 @@ id="todo"
     });
   });
   </script>
-  <apex:includeScript value="{!URLFOR($Resource.RollCallAssets, 'fastclick/fastclick.js')}"/>
   <title> Checker </title>
   <style type="text/css">
   .repaint { -webkit-animation: bugfix infinite 1s; }
@@ -988,6 +989,9 @@ id="todo"
 </body>
 <script>
 
+$(function() {
+    FastClick.attach(document.body);
+});
 /** Set up forceTK. */
 var forcetkClient = new forcetk.Client();
 forcetkClient.setSessionToken('{!$Api.Session_ID}');
