--- a/Checklist.html
+++ b/Checklist.html
@@ -6,10 +6,10 @@ standardController="Checklist_Response__c"
 extensions="ChecklistExtension"
 applyHtmlTag="false"
 applyBodyTag="false"
-id="todo"
 >
 <html ng-app="checklistApp">
 <head>
+  <title> Checker </title>
   <apex:stylesheet value="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400"/>
   <meta name="viewport" content="width=device-width, initial-scale=1,  minimum-scale=1, maximum-scale=1, user-scalable=no"/>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"> </script>
@@ -18,9 +18,6 @@ id="todo"
   <apex:includeScript value="{!URLFOR($Resource.RollCallAssets, 'fastclick/fastclick.js')}"/>
 
   <script language="javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
-  <script>
-  Visualforce.remoting.timeout = 120000;
-  </script>
   <script type="text/javascript">
   function setSection(to, from)
   {
@@ -78,7 +75,7 @@ id="todo"
     });
   });
   </script>
-  <title> Checker </title>
+
   <style type="text/css">
   .repaint { -webkit-animation: bugfix infinite 1s; }
 
@@ -917,18 +914,17 @@ id="todo"
               <input class="yes-no" id="form_yes/no_{{checklistitem.Checklist_Item__c}}" type="checkbox" ng-switch-when="Yes/No" ng-model="checklistitem.Answer__c"> </input>
               <label ng-switch-when="Yes/No" class="switch repaint" for="form_yes/no_{{checklistitem.Checklist_Item__c}}" id="yes-button"> Yes </label>
               <label ng-switch-when="Yes/No" class="switch repaint" for="form_yes/no_{{checklistitem.Checklist_Item__c}}" id="no-button"> No </label>
-              <input id="form_number_{{checklistitem.Checklist_Item__c}}" type="number" ng-switch-when="Number" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}" class="h5-number"> </input>
+              <input ng-switch-when="Number" id="form_number_{{checklistitem.Checklist_Item__c}}" type="number" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}" class="h5-number"> </input>
               <input id="form_text_{{checklistitem.Checklist_Item__c}}" type="text" ng-switch-when="Text" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}"> </input>
               <input id="form_date_{{checklistitem.Checklist_Item__c}}" type="date" ng-switch-when="Date" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}"> </input>
               <input class="input" type="file" id="image" accept="image/*" ng-switch-when="Photo" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}"/>
 
               <textarea id="form_longtext_{{checklistitem.Checklist_Item__c}}" ng-switch-when="Long Text" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}">Enter response here...</textarea>
-              <!-- Multiple Values from Database -->
               <input id="form_rating_{{checklistitem.Checklist_Item__c}}" type="range" ng-switch-when="Rating" min="{{checklistitem.Checklist_Item__r.Values[0]}}" max="{{checklistitem.Checklist_Item__r.Values[1]}}" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}"> </input>
               <div ng-show="checklistitem.Checklist_Item__r.Type__c=='Rating'">
                 {{checklistitem.Answer__c}}
               </div>
-              <select id="form_date_{{checklistitem.Checklist_Item__c}}" ng-switch-when="Picklist" ng-model="checklistitem.Answer__c"    ng-required="{{checklistitem.Checklist_Item__r.Required__c}}" ng-options="val for val in checklistitem.Checklist_Item__r.Values"> 
+              <select id="form_date_{{checklistitem.Checklist_Item__c}}" ng-model="checklistitem.Answer__c" ng-required="{{checklistitem.Checklist_Item__r.Required__c}}" ng-options="val for val in checklistitem.Checklist_Item__r.Values" ng-switch-when="Picklist" >
               </select>
               <div ng-switch-when="Multi-Select">
                 <div ng-repeat="val in checklistitem.Checklist_Item__r.Values">
@@ -1106,6 +1102,7 @@ controllers.PagesController = function ($scope, $timeout) {
       var values = $scope.checklistitems[i].Checklist_Item__r.Values__c;
       if (values) {
         $scope.checklistitems[i].Checklist_Item__r.Values = values.split(', ');
+        $scope.checklistitems[i].Answer__c = $scope.checklistitems[i].Checklist_Item__r.Values[0];
         $scope.checklistitems[i].Checklist_Item__r.Values2 = [];
       }
     }
